--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>service-discovery</name>
     <description>service-discovery</description>
+
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.5</spring-cloud.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -29,6 +31,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -40,6 +43,36 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <profiles>
+        <profile>
+            <id>production</id>
+            <properties>
+                <activatedProperties>production</activatedProperties>
+            </properties>
+        </profile>
+        <profile>
+            <id>treina-cloud</id>
+            <properties>
+                <activatedProperties>treina-cloud</activatedProperties>
+            </properties>
+        </profile>
+        <profile>
+            <id>development</id>
+            <properties>
+                <activatedProperties>development</activatedProperties>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>docker-local</id>
+            <properties>
+                <activatedProperties>docker-local</activatedProperties>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
